{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 10,
  "lineage": "278a9f99-8bc2-3f15-c967-afa3c5934a83",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "dev-server-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-07-31T01:21:29.601-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c385bcd0f66a/global/firewalls/development-server-firewall-egress",
            "log_config": [],
            "name": "development-server-firewall-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c385bcd0f66a",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/global/firewalls/development-server-firewall-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "petclinic-dev-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "dev-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "7979"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8081"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8082"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8083"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8761"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8888"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "9090"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "9091"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "9411"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-31T01:21:30.774-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-04-c385bcd0f66a/global/firewalls/development-server-firewall",
            "log_config": [],
            "name": "development-server-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "qwiklabs-gcp-04-c385bcd0f66a",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/global/firewalls/development-server-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "petclinic-dev-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "PetclinicServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260730",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/zones/us-east1-d/disks/development-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-07-31T01:21:33.285-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-04-c385bcd0f66a/zones/us-east1-d/instances/development-server",
            "instance_id": "916898550619694563",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "devops:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDMjQeRumu1rOoeDVXW2vKemQmBhi1NAnFJwuCbptnbYhVtff6dFRfwlT7OsQzIHy+HyBZbHPIukMtgX/MEypyLGO1odiHeX6IyfVLmgkcqERZZZp7VHi0c8MsLMiXz8+kjDflMXEjwZJDSmtxkszdRy6bO43ogwdNMAwqiChW2m7wO5XUSwHKnU7bjB95gkEZkRf5ZpYLxq5lW+5NQ1EfthPX8cOzyHqRG5KbJqKR+aXSy0IZp59iOGt51HxgThfFU0oQcn/TqwZWFExtr94/vsOXVbt+IOQPZvEUEA4N1NVd1E93aXT33MpjwCoOYOb9ucmy1e+CM4QjiOe/84bZn devops\r\n"
            },
            "metadata_fingerprint": "DChCE-ab9n0=",
            "metadata_startup_script": "#!/bin/bash\n\nset -e\n\n# ------------------------------------------------------------\n# Update OS\n# ------------------------------------------------------------\n\napt-get update -y\napt-get upgrade -y\n\n\n# ------------------------------------------------------------\n# Set hostname\n# ------------------------------------------------------------\n\nhostnamectl set-hostname Development-Server\n\n\n# ---------------------------------------------------- [...]
            "name": "development-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.23.36.103",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/global/networks/default",
                "network_ip": "10.142.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/regions/us-east1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-04-c385bcd0f66a"
              }
            ],
            "project": "qwiklabs-gcp-04-c385bcd0f66a",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-04-c385bcd0f66a/zones/us-east1-d/instances/development-server",
            "service_account": [
              {
                "email": "202474308797-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "petclinic-dev-server"
            ],
            "tags_fingerprint": "pfhNqGnNG2U=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-d"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}